Added API endpoint for our raw commands
