# src/org/traccar/api/resource/SOSResource.java
@@ -1,0 +1,40 @@
+/*
+ * Copyright 2015 Anton Tananaev (anton.tananaev@gmail.com)
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.traccar.api.resource;
+
+import org.traccar.Context;
+import org.traccar.api.BaseResource;
+import org.traccar.database.ActiveDevice;
+import org.traccar.model.Command;
+
+import javax.ws.rs.*;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+
+@Path("sos")
+@Produces(MediaType.APPLICATION_JSON)
+@Consumes(MediaType.APPLICATION_JSON)
+public class SOSResource extends BaseResource {
+
+    @POST
+    public Response add(Command entity) {
+        Context.getPermissionsManager().checkDevice(getUserId(), entity.getDeviceId());
+        ActiveDevice device = Context.getConnectionManager().getActiveDevice(entity.getDeviceId());
+        device.write(entity.getType());
+        return Response.ok(entity).build();
+    }
+
+}
